# netsmoke

./: .dockerignore  .env.example  .gitignore  .tool-versions  CLAUDE.md  COPYRIGHT  Dockerfile  Dockerfile.octopus  GRAPHS.md  Justfile  README.md  SPEC.md  TODO.md  compose.yaml  config.example.yaml  docker-compose.yml  justfile  smoke_poc_bars.py
.claude/: settings.local.json
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/netsmoke/: api.py  collector.py  config.py  db.py  graph.py  main.py  pinger.py
backend/src/netsmoke/: app.py  config_loader.py  models.py  settings.py
backend/src/netsmoke/api/: routes.py
backend/src/netsmoke/collector/: service.py
backend/src/netsmoke/db/: init.py  session.py
backend/src/netsmoke/graphs/: smoke.py
backend/src/netsmoke/probes/: fping.py
backend/src/netsmoke/services/: targets.py  tree.py  types.py
backend/src/netsmoke_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: test_api.py  test_api_tree.py  test_collector.py  test_config.py  test_config_loader.py  test_db.py  test_db_sync.py  test_fping_probe.py  test_graph.py  test_graph_series.py  test_lifespan.py  test_pinger.py  test_smoke.py  test_tree_service.py
config/: netsmoke.example.yaml  netsmoke.yaml
frontend/: .tool-versions  Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.js  vite.config.ts
frontend/src/: App.css  App.jsx  App.tsx  api.js  api.ts  styles.css  types.ts
frontend/src/components/: GraphView.jsx  GraphView.tsx  Sidebar.tsx  TimeRangeSelector.jsx  ZoomView.tsx
frontend/src/features/tree/: TargetTree.tsx
frontend/src/lib/: api.ts
frontend/src/test/: App.test.jsx  App.test.tsx  Sidebar.test.tsx  ZoomView.test.jsx  ZoomView.test.tsx  api.test.ts
frontend/tests/: app.spec.ts
importer/: pyproject.toml
importer/smokeping_import/: __init__.py  __main__.py  cli.py  importer.py  rrd_parser.py  targets_parser.py
