[project]
name = "netsmoke"
version = "0.1.0"
description = "SmokePing-inspired network latency monitor"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pyyaml>=6.0",
    "matplotlib>=3.9",
    "numpy>=2.0",
    "aiosqlite>=0.20",
]

[project.scripts]
netsmoke = "netsmoke.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["netsmoke"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
