[project]
name = "smokeping-importer"
version = "0.1.0"
description = "One-time importer: SmokePing RRD data → netsmoke SQLite + config.yaml"
requires-python = ">=3.12"
dependencies = [
    "netsmoke",
    "pyyaml>=6.0",
]

[project.scripts]
smokeping-import = "smokeping_import.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["smokeping_import"]

[tool.uv.sources]
netsmoke = { path = "../backend", editable = true }
